# study

./: CMakeLists.txt  README.md
CRC_Check/: Makefile  crc16.c  crc16.h  main.c  test.c
I2C/: i2c_test.c
Json/: Makefile
LinkMessage/: Serial_LinkCommand.c  Serial_LinkCommand.h
bonjour/server/: Makefile  bonjour_server.c
bonjour/ubuntu-work/: mdnsd
cJSON/: test.c
hsv_rgb/: hsv_rgb.c
http/: http_test.c
http/http_req/: make
http/http_server/: http_client.c
http_server/: http_client.c
syslog/: syslog.c
time/: mTime.c
tlv/: tlv.c
